--- a/simulation/experiments/simple-no-sa-1worker.yaml
+++ b/simulation/experiments/simple-no-sa-1worker.yaml
@@ -1,4 +1,5 @@
-period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
+# Configuration with simple dispatcher and no self-adaptive strategy (ref. baseline).
+# This configuration makes only 1 worker active and since there is no SA, other 3 remain inactive the whole time.
 
 # Workers could be either a number or a list that explicitly states a collection of attributes
 # If only a number is given, the workers are initialized with no attributes at the beginning.
@@ -12,14 +13,7 @@ workers:
 # where class is fully qualified class name and args is list or dict holding constructor arguments
 dispatcher: experiments.simple.dispatcher.SimpleDispatcher
 
-# self-adapting strategy component (same format as dispatcher)
-sa_strategy: experiments.simple.sa_strategy.SimpleSelfAdaptingStrategy
-
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
   - metrics.default.JobDelayMetricsCollector
   - metrics.default.PowerMetricsCollector
-  - class: metrics.user_experience.UserExperienceMetricsCollector
-    args:
-      - "@@ref_jobs"
-      - [ 1.5, 3.0 ]  # thresholds
