--- a/simulation/experiments/user_experience_nn.yaml
+++ b/simulation/experiments/user_experience_nn.yaml
@@ -4,13 +4,13 @@
 # take no more than given limit are allowed in (all queues remain active the whole time).
 # The key part of the scenario is the duration estimation algorithm used by dispatcher.
 
-# This baseline configuration uses only a job dispatcher (no SA) that estimates job duration
-# based on the job limits.
+# This configuration uses dispatcher and SA strategy based on neural-network regression estimator.
+# The NN is trained in batches of incoming jobs as the simulation progresses.
 
 # Workers could be either a number or a list that explicitly states a collection of attributes
 # If only a number is given, the workers are initialized with no attributes at the beginning.
 workers:
-  - active: true # first worker has no limit
+  - active: true
   - active: true
     limit: 30.0
   - active: true
@@ -20,7 +20,18 @@ workers:
 
 # dispatcher component: either a string (fully qualified class name) or a collection with { class, args }
 # where class is fully qualified class name and args is list or dict holding constructor arguments
-dispatcher: experiments.user_experience.dispatcher.JobCategoryDispatcher
+dispatcher: experiments.user_experience_nn.dispatcher.JobCategoryDispatcher
+
+# self-adapting strategy component (same format as dispatcher)
+sa_strategy:
+  class: experiments.user_experience_nn.sa_strategy.CategorySelfAdaptingStrategy
+  args:
+    layers_widths: [ 1024 ]  # each value represents a width of one hidden layer
+    batch_size: 500
+    batch_epochs: 5
+    ref_jobs: "@@ref_jobs"
+
+period: 60  # in seconds, how often a sa strategy (MAPE-K loop) is invoked
 
 # list of metric components (each one is in the same format as dispatcher)
 metrics:
